# backend/Swagger.json
@@ -888,6 +888,150 @@
 					}
 				}
 			}
+		},
+		"/messages/groups": {
+			"post": {
+				"tags": ["Messages"],
+				"summary": "Create a message group",
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"example": {
+								"participants": ["userId1", "userId2"]
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Message group created successfully",
+						"content": {
+							"application/json": {
+								"example": {}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad request - Invalid input data"
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				}
+			},
+			"get": {
+				"tags": ["Messages"],
+				"summary": "Get message groups",
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "List of message groups",
+						"content": {
+							"application/json": {
+								"example": []
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized - Weak authentication failed"
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				}
+			}
+		},
+		"/messages/group/{groupId}": {
+			"post": {
+				"tags": ["Messages"],
+				"summary": "Send a message",
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"name": "groupId",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"example": {
+								"text": "Hello, how are you?"
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Message sent successfully",
+						"content": {
+							"application/json": {
+								"example": {}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad request - Invalid input data"
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				}
+			},
+			"get": {
+				"tags": ["Messages"],
+				"summary": "Get messages",
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"name": "groupId",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "List of messages",
+						"content": {
+							"application/json": {
+								"example": []
+							}
+						}
+					},
+					"400": {
+						"description": "Bad request - Invalid input data"
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				}
+			}
 		}
 	},
 	"components": {
@@ -1087,6 +1231,10 @@
 		{
 			"name": "Posts",
 			"description": "Endpoints for managing posts"
+		},
+		{
+			"name": "Messages",
+			"description": "Endpoints for managing messages"
 		}
 	]
 }
