# backend/routes/messagesRouter.js
@@ -3,8 +3,8 @@ const messageController = require("../controllers/messageController");
 const { weakAuthentication } = require("../middleware/authenticateToken");
 const router = express.Router();
 
-router.get("/", weakAuthentication, messageController.getMessages);
-router.post("/", weakAuthentication, messageController.sendMessage);
+router.get("/group/:groupId", weakAuthentication, messageController.getMessages);
+router.post("/group/:groupId", weakAuthentication, messageController.sendMessage);
 
 router.get("/groups", weakAuthentication, messageController.getMessageGroups);
 router.post("/groups", weakAuthentication, messageController.createMessageGroup);
